# algo-testing-system

./: .clang-format  Arrays.h  ArraysInt.h  ArraysTest.cpp  BaseTask.cpp  BaseTask.h  BitChess.cpp  CMakeLists.txt  Dockerfile  Fibo.cpp  ForwardedList.h  MultilineResultBaseTask.h  Power.cpp  Primes.cpp  PriorityQueue.h  PriorityQueueTest.cpp  README.md  RESULTS.md  RESULTS_ARRAYS.md  StringLength.cpp  Tickets.cpp  results.txt
0.BITS/4.BitboardBishop/: problem.txt
Sorting/: README.md  RESULTS.md  Sorting.h  SortingTest.cpp
